Fixed horizontal scrolling overflow

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,11 @@
     --bs-body-font-family: 'Urbanist', sans-serif;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 html {
     height: calc(100vh - 84px);
     margin-top: 84px;
